miscellaneous java code improvements
freemarker templating
- reduce conditional logic for creating the output directory
- use a String object instead of File while iterating over
  the template files

now playing
- treat the album art mpris entry as an actual URL object
- rename image download thread to a more sutable name
- remove unnecessary class constructor argument when
  it can be infered from another argument
- deprecate use of Paths for Path