@@ -5,9 +5,10 @@ import org.slf4j.LoggerFactory;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.concurrent.ExecutorService;
 
@@ -29,11 +30,12 @@ public class MusicPlayerWriter {
      * @throws IOException
      */
     public void init() throws IOException {
-        Path outputDirPath = Paths.get(outputDirectory);
+        Path outputDirPath = Path.of(outputDirectory);
+        Files.createDirectories(outputDirPath);
 
         if (!Files.isDirectory(outputDirPath)) {
-            logger.info("creating the output directory: {}", outputDirPath);
-            Files.createDirectories(outputDirPath);
+            logger.error("unable to create the output directory {}", outputDirPath);
+            throw new RuntimeException("output directory does not exist");
         }
     }
 
@@ -48,30 +50,37 @@ public class MusicPlayerWriter {
         writeFile("album", player.getAlbum());
         writeFile("genre", player.getGenre());
 
-        String coverArtPath = player.getAlbumArtPath();
+        try {
+            if (player.getAlbumArtURL() != null) {
+                URL coverArtURL = new URL(player.getAlbumArtURL());
+                String albumArtFilePath;
+                // is the album art in the local file system or on the web?
+                if (coverArtURL.getProtocol().equals("file")) {
+                    // image is in the local file system (ex. file://folder/image.jpg)
+                    albumArtFilePath = coverArtURL.getFile();
+                } else {
+                    //                                             the id
+                    //                                              /
+                    // ex. https://i.scdn.co/image/ab67616d0000b273bbf0146981704a073405b6c2
+                    String resourceLocation = coverArtURL.getFile();
+                    String id = resourceLocation.substring(resourceLocation.lastIndexOf('/') + 1);    // get the resource name
+                    Path imagePath = Path.of(outputDirectory, ALBUM_ART + "." + id);
+                    executor.execute(new ImageDownloadTask(coverArtURL, imagePath));
+                    albumArtFilePath = imagePath.toString();
+                }
 
-        if (coverArtPath != null) {
-            Path albumArtPath = null;
-            // is the album art on the web or in the local file system?
-            if (coverArtPath.startsWith("http")) {
-                // ex. https://i.scdn.co/image/ab67616d0000b273bbf0146981704a073405b6c2
-                String id = coverArtPath.substring(coverArtPath.lastIndexOf('/') + 1);    // get the resource name
-                albumArtPath = Paths.get(outputDirectory, ALBUM_ART + "." + id);
-                executor.execute(new ImageDownloader(outputDirectory, coverArtPath, albumArtPath));
+                writeFile(ALBUM_ART_PATH, albumArtFilePath);
             } else {
-                // image is in the local file system (ex. file://folder/image.jpg), remove the uri notation
-                albumArtPath = Paths.get(coverArtPath.replaceFirst("file://", ""));
+                // if no album art is available, delete the conky album art path file
+                Path coverArt = Path.of(outputDirectory, FILE_PREFIX + "." + ALBUM_ART_PATH);
+                try {
+                    Files.deleteIfExists(coverArt);
+                } catch (IOException e) {
+                    logger.error("unable to delete the album art file", e);
+                }
             }
-
-            writeFile(ALBUM_ART_PATH, albumArtPath.toString());
-        } else {
-            // if no album art is available, delete the conky album art path file
-            Path coverArt = Paths.get(outputDirectory, FILE_PREFIX + "." + ALBUM_ART_PATH);
-            try {
-                Files.deleteIfExists(coverArt);
-            } catch (IOException e) {
-                logger.error("unable to delete the album art file", e);
-            }
+        } catch (MalformedURLException e) {
+            logger.error("incorrect album art URL given by the music player", e);
         }
 
         logger.info("wrote track info to disk");
@@ -79,7 +88,7 @@ public class MusicPlayerWriter {
 
     private void writeFile(String filename, String data) {
         try {
-            Path filePath = Paths.get(outputDirectory, FILE_PREFIX + "." + filename);
+            Path filePath = Path.of(outputDirectory, FILE_PREFIX + "." + filename);
             BufferedWriter writer = Files.newBufferedWriter(filePath,
                                                             StandardOpenOption.CREATE,
                                                             StandardOpenOption.WRITE,
